# python-project-template

{{cookiecutter.project_name}}/: .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
