[tool.towncrier]
    package="{{cookiecutter.project_slug}}"
    filename="CHANGELOG.md"
    issue_format = "`#{issue} <{{cookiecutter.github_url}}/issues/{issue}>`_"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backward-incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "New Features"
        showcontent = true

[tool.black]
line-length = 90

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
# default is FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# Placing third-party imports at the end makes their inclusion more obvious
sections = ["FUTURE", "STDLIB", "ATTRS", "ISIVISTA", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
known_attrs = ["attr"]
# Keep VISTA dependencies separate that aren't part of this project.
known_isivista = ["immutablecollections", "vistautils"]

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
coverage = "^5.2.1"
pytest-cov = "^2.10.1"
pytest-benchmark = "^3.2.3"
pylint = "^2.5.3"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^4.3.21"
towncrier = "^19.2.0"
python-language-server = {extras = ["all"], version = "^0.34.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
